css/main.css
/*
 * HTML5 Boilerplate
 *
 * What follows is the result of much research on cross-browser styling.
 * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
 * Kroc Camen, and the H5BP dev community and team.
 */

/* ==========================================================================
   Base styles: opinionated defaults
   ========================================================================== */

html,
button,
input,
select,
textarea {
    color: #222;
}

body {
    font-size: 1em;
    line-height: 1.4;
}

/*
 * Remove text-shadow in selection highlight: h5bp.com/i
 * These selection rule sets have to be separate.
 * Customize the background color to match your design.
 */

::-moz-selection {
    background: #b3d4fc;
    text-shadow: none;
}

::selection {
    background: #b3d4fc;
    text-shadow: none;
}

/*
 * A better looking default horizontal rule
 */

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}

/*
 * Remove the gap between images and the bottom of their containers: h5bp.com/i/440
 */

img {
    vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
    resize: vertical;
}

/* ==========================================================================
   Chrome Frame prompt
   ========================================================================== */

.chromeframe {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */

/* -------------------------- Modules -------------------------------*/

#photo {
    position: relative;
    background: #FFF;
}
#photo img {
    width: 100%;
    overflow: hidden;
}
#photo .caption {
    font-size: 25px;
    color: #eee;
    font-family: 'Raleway', sans-serif;
    background: #111; /* fallback */
    background: rgba(0,0,0,0.7);
    margin: 0 17px 0 0;
    width: 100%;
    line-height: 2.17em; /* matches margin, below */
    background: white;
    color: #111;
    z-index: 1; /* keep caption above images */
}


@media screen and (max-width: 799px) {
/*@media screen and (max-device-width: 480px) {*/
  /* on small devices, conserve vertical space with text-indent
   * rather than margin-top on paragraphs */
  #letter p + p {
    text-indent: 1.5em;
    margin-top: 0
  }

  /* and tighten spacing */
  #letter p {
    margin: 0 20px;
  }

}
@media screen and (min-width: 800px) {
  #letter p {
    margin: 0.83em 20px 0;
  #letter .gradient { /* visual clue that the user should scroll to see more */
    position: absolute;
    bottom: 0;
    height: 24px;
    width: 38%; /* fallback */
    width: calc(40% - 15px); /* prevent gradient from covering ~15px scrollbar */

    background: -moz-linear-gradient(top,  rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%); /* FF3.6+ */
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0)), color-stop(100%,rgba(255,255,255,1))); /* Chrome,Safari4+ */
    background: -webkit-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%); /* Chrome10+,Safari5.1+ */
    background: -o-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%); /* Opera 11.10+ */
    background: -ms-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%); /* IE10+ */
    background: linear-gradient(to bottom,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%); /* W3C */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
  }
}

#intro p {
  margin: 0.83em 20px;
}


#letter p {
    line-height: 1.5;
    font-family: 'PT Serif', serif;
    color: #222;
    font-family: Georgia, serif;
}
#letter .closing {
    font-style: italic;
    margin-bottom: .83em;
}
#letter p:first-child {
    /* extra space at start of letter and between text and closing */
    margin-top: 2.17em;
    /* margin from http://www.w3.org/Style/Examples/007/indent.en.html */
}
#letter .closing p + p {
    margin-top: 0; /* paragraphs in closing / signatuure treated as one logical block */
}

header {
    text-align: center;
    font-family: 'Raleway', sans-serif;
    padding: 1em;
}
header h1 {
    margin: 0;
    font-size: 31px;
    font-weight: normal;
    color: #111;
    padding: .125em 0;
    border-top: 1px solid whitesmoke;
    border-bottom: 1px solid #c0c0c0; /* darker: more visual separation from content below. */
}
header a {
    text-decoration: none;
    color: #111;
}



/* -------------------------- Animation------------------------------*/
.caption div.is-onscreen {
    display: inline-block;
}
.is-offscreen {
    display: none;
}

.caption div {
    /* prevent text in div from wrapping when we push it off right edge. */
    position: absolute;
    left: 0;
}

@media screen {
    div#preloader {
        position: absolute;
        left: -9999px;
        top:  -9999px;
        }
    div#preloader img {
        display: block;
        }
    }
@media print {
    div#preloader,
    div#preloader img {
        visibility: hidden;
        display: none;
        }
    }


/* ------------------------- Layout ---------------------------------*/
/* apply a natural box layout model to all elements */
*, *:before, *:after {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  /* http://html5please.com/#box-sizing */
 }


header {
    padding: 0;
    border-right: 1px solid whitesmoke;
    -webkit-transition: all .25s ease-out;
    -moz-transition: all .25s ease-out;
    -ms-transition: all .25s ease-out;
    -o-transition: all .25s ease-out;
    transition: all .25s ease-out;
}
#intro {
    text-align: left;
    font-size: 19px;
    background: white;
    color: black;
}
#map {
    height: 30%;
    border-left: 1px solid #c0c0c0;
    border-top: 1px solid #c0c0c0;
    bottom: 0;

}

@media screen and (max-width: 799px) {
  #map {
    min-height: 300px;
    border-left: none;
  }
  header {
    border-right: none;
  }

}
@media screen and (min-width: 800px) {
  html, body, #sidebar {
    height: 100%;  /* use entire screen */
  }
  #sidebar {
    float: left;
    width: 40%;
  }
  #map, #photo {
    margin-left: 40%; /* to side of letter */
    width: 60%;
    position: absolute;
    /* ensure that border does not impact width of map */
    /* Without this, window's horizontal scroll bar appeared
     * due to overflowing content. */
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
  }
  #photo {
      height: 70%;
      overflow: hidden;
      top: 0;
  }
  #photo img {
    position: absolute; /* ensures that images slide on top of each other, not hidden lower on the screen */
    left: 0;

    border-right: 1px solid black;
    border-bottom: 1px solid black;
}
  #photo .caption {
    position: absolute;
    bottom: 0px;
  }
  #letter {
    overflow-y: auto;
    -webkit-overflow-scrolling: touch;
    direction: rtl; /* move the scrollbar to the left side so it isn't flush with photo caption */
  }
  #letter * {
    direction: ltr; /* restore text direction from scrollbar moving trick above */
    /* TODO: investigate custom scrollbars (use a narrow/minimal/low contrast bar
     *       and keep it on the right side).
     *       http://manos.malihu.gr/tuts/jquery_custom_scrollbar.html
     *       http://css-tricks.com/custom-scrollbars-in-webkit/  */
  }
}

/* ==========================================================================
   Helper classes
   ========================================================================== */

/*
 * Image replacement
 */

.ir {
    background-color: transparent;
    border: 0;
    overflow: hidden;
    /* IE 6/7 fallback */
    *text-indent: -9999px;
}

.ir:before {
    content: "";
    display: block;
    width: 0;
    height: 150%;
}

/*
 * Hide from both screenreaders and browsers: h5bp.com/u
 */

.hidden {
    display: none !important;
    visibility: hidden;
}

/*
 * Hide only visually, but have it available for screenreaders: h5bp.com/v
 */

.visuallyhidden {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
}

/*
 * Extends the .visuallyhidden class to allow the element to be focusable
 * when navigated to via the keyboard: h5bp.com/p
 */

.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
    clip: auto;
    height: auto;
    margin: 0;
    overflow: visible;
    position: static;
    width: auto;
}

/*
 * Hide visually and from screenreaders, but maintain layout
 */

.invisible {
    visibility: hidden;
}

/*
 * Clearfix: contain floats
 *
 * For modern browsers
 * 1. The space content is one way to avoid an Opera bug when the
 *    `contenteditable` attribute is included anywhere else in the document.
 *    Otherwise it causes space to appear at the top and bottom of elements
 *    that receive the `clearfix` class.
 * 2. The use of `table` rather than `block` is only necessary if using
 *    `:before` to contain the top-margins of child elements.
 */

.clearfix:before,
.clearfix:after {
    content: " "; /* 1 */
    display: table; /* 2 */
}

.clearfix:after {
    clear: both;
}

/*
 * For IE 6/7 only
 * Include this rule to trigger hasLayout and contain floats.
 */

.clearfix {
    *zoom: 1;
}

/* ==========================================================================
   EXAMPLE Media Queries for Responsive Design.
   These examples override the primary ('mobile first') styles.
   Modify as content requires.
   ========================================================================== */

@media only screen and (min-width: 35em) {
    /* Style adjustments for viewports that meet the condition */
}

@media print,
       (-o-min-device-pixel-ratio: 5/4),
       (-webkit-min-device-pixel-ratio: 1.25),
       (min-resolution: 120dpi) {
    /* Style adjustments for high resolution devices */
}

/* ==========================================================================
   Print styles.
   Inlined to avoid required HTTP connection: h5bp.com/r
   ========================================================================== */

@media print {
    * {
        background: transparent !important;
        color: #000 !important; /* Black prints faster: h5bp.com/s */
        box-shadow: none !important;
        text-shadow: none !important;
    }

    a,
    a:visited {
        text-decoration: underline;
    }

    a[href]:after {
        content: " (" attr(href) ")";
    }

    abbr[title]:after {
        content: " (" attr(title) ")";
    }

    /*
     * Don't show links for images, or javascript/internal links
     */

    .ir a:after,
    a[href^="javascript:"]:after,
    a[href^="#"]:after {
        content: "";
    }

    pre,
    blockquote {
        border: 1px solid #999;
        page-break-inside: avoid;
    }

    thead {
        display: table-header-group; /* h5bp.com/t */
    }

    tr,
    img {
        page-break-inside: avoid;
    }

    img {
        max-width: 100% !important;
    }

    @page {
        margin: 0.5cm;
    }

    p,
    h2,
    h3 {
        orphans: 3;
        widows: 3;
    }

    h2,
    h3 {
        page-break-after: avoid;
    }
}

